# hodei-verified-permissions

./: .gitignore  AGENTS.md  ANALYSIS_COMPLETE.txt  AUDIT_REPORT_REAL.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPLIANCE_ANALYSIS_INDEX.md  COMPLIANCE_EXECUTIVE_SUMMARY.md  Cargo.toml  DEV_START_REVIEW_AND_IMPROVEMENTS.md  Dockerfile.test  E2E_STATUS.md  EPICS_AUDIT_SUMMARY.md  EPIC_COMPLETION_REPORT.md  ESTADO_PROYECTO.md  FASE2_COMPLETADA.md  FINAL_100_PERCENT_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_SESSION_REPORT.md  FUNCTIONALITY_AUDIT.md  GAPS_IMPLEMENTATION_PLAN_PART1.md  GAPS_IMPLEMENTATION_PLAN_PART2.md  HISTORIAS_USUARIO_4_COMPLIANCE_REPORT.md  HU_ADVANCED_VERIFICATION.md  HU_VERIFICATION_REPORT.md  IMPLEMENTACION_COMPLETA.md  IMPLEMENTACION_FASE3_COMPLETADA.md  IMPLEMENTATION_PROGRESS_REPORT.md  JWT_INTEGRATION_STATUS.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  PID_MANAGEMENT_GUIDE.md  PLAN_AVP_CLONE.md  PLAYGROUND_IMPLEMENTATION_SUMMARY.md  PROGRESO_IMPLEMENTACION.md  PROTO_IMPLEMENTATION_STATUS.md  QUICK_START.md  README.es.md  README.md  (+24 more)
cli/: Cargo.toml  README.md
cli/src/: main.rs
docs/: ALIGNMENT_EXPRESSJS_CEDAR.md  ANEXO_STS_IMPLEMENTATION.md  CONFIGURATION.md  E2E_TEST_IMPLEMENTATION_SUMMARY.md  EXPRESSJS_ARCHITECTURE_ANALYSIS.md  GUIA_DESARROLLADOR_COMPLETA.md  GUIA_USO_CLI_GENERACION_SCHEMA.md  HVP_CLI_EXTENSIONS_PLAN.md  HVP_CLI_MANUAL.md  IMPLEMENTATION_PLAN_EXPRESSJS_ALIGNMENT.md  MANUAL_USUARIO.md  MIGRATION_GUIDE_SDK.md  MULTI_TENANCY_GUIDE.md  PLAN_ARQUITECTURA_HIBRIDA.md  PLAN_EXPANSION_FUNCIONALIDAD_CEDAR_RUST.md  PLAN_IMPLEMENTACION_DETALLADO.md  PLAN_TESTS_TESTCONTAINERS.md  POLICY_STORE_IMPROVEMENT_PLAN.md  PROYECTO_COMPLETADO_RESUMEN_FINAL.md  REFACTOR_PLAN_SDK_LIGHTWEIGHT.md  RELEASE_SUMMARY_v0.2.0.md  RESUMEN_IMPLEMENTACION_FINAL.md  RUST_ARCHITECTURE_IMPLEMENTATION.md  SDK_COMPARISON_REPORT.md  SDK_COMPARISON_REPORT_UPDATED.md  SDK_USAGE_GUIDE.md  SPRINT1_IMPLEMENTACION_COMPLETADA.md  TESTING.es.md  (+12 more)
examples/app/: .env  Cargo.toml  openapi.json
examples/app/config/: schema.json
examples/app/config/policies/: admin.cedar  customer.cedar  vet.cedar
examples/app/src/: main.rs
examples/app/templates/: appointments.html  base.html  dashboard.html  login.html  pet_detail.html  pets.html  style.css
examples/axum-simple-rest/: Cargo.toml  README.md  v4.cedarschema.json
examples/axum-simple-rest/src/: main.rs
examples/todo-app/: Cargo.toml  Dockerfile  README.md  openapi.json  v4.cedarschema.json
examples/todo-app/policies/: policy_1.cedar  policy_2.cedar  policy_3_team_member.cedar  policy_4_project_manager.cedar  policy_5_read_only.cedar
examples/todo-app/src/: handlers.rs  lib.rs  main.rs  models.rs  storage.rs
examples/todo-app/tests/: integration_tests.rs
hodei-macros/: Cargo.toml  README.md
hodei-macros/src/: lib.rs
hvp-cli/: Cargo.toml  README.es.md  README.md
hvp-cli/src/: main.rs
sdk/: Cargo.toml  README.es.md  README.md  build.rs
sdk-admin/: Cargo.toml  README.md
sdk-admin/src/: lib.rs
sdk-admin/tests/: integration_test.rs
sdk/docs/: IDENTITY_SOURCES.md  MIDDLEWARE_GUIDE.md
sdk/examples/: basic_usage.rs
sdk/proto/: authorization.proto
sdk/src/: auth_decision.rs  builders.rs  client.rs  client_trait.rs  compat.rs  lib.rs
sdk/src/authorization/: mod.rs
sdk/src/middleware/: extractor.rs  layer.rs  mod.rs  service.rs
sdk/src/schema/: mod.rs  openapi_mapper.rs  serialization.rs  service.rs  types.rs
sdk/tests/: compat_test.rs
verified-permissions/: .env  Cargo.toml  Dockerfile  PROGRESS.md  REFACTOR_STATUS.md  TODO_COMPILACION.md
verified-permissions/.cargo/: config.toml
verified-permissions/api/: Cargo.toml  build.rs
verified-permissions/api/proto/: authorization.proto
verified-permissions/api/src/: cli.rs  lib.rs
verified-permissions/api/src/grpc/: audit_interceptor.rs  control_plane.rs  data_plane.rs  mod.rs
verified-permissions/application/: Cargo.toml
verified-permissions/application/src/: dto.rs  errors.rs  lib.rs  services.rs  use_cases.rs
verified-permissions/application/src/use_cases/: authorization.rs  policy.rs  policy_store.rs  schema.rs
verified-permissions/docs/: E2E_TEST_PLAN_POLICY_STORE.md
verified-permissions/domain/: Cargo.toml
verified-permissions/domain/src/: entities.rs  errors.rs  events.rs  lib.rs  repository.rs  services.rs  value_objects.rs
verified-permissions/domain/src/events/: tests.rs
verified-permissions/domain/src/repository/: tests.rs
verified-permissions/infrastructure/: Cargo.toml
verified-permissions/infrastructure/src/: config.rs  error.rs  events.rs  factory.rs  lib.rs
verified-permissions/infrastructure/src/cache/: policy_store_cache.rs  reload_task.rs
verified-permissions/infrastructure/src/events/: webhook_handler.rs
verified-permissions/infrastructure/src/jwt/: claims_mapper.rs  issuer_detection.rs  jwks_cache.rs  mod.rs  transforms.rs  validator.rs
verified-permissions/infrastructure/src/jwt/providers/: cognito.rs  keycloak.rs  mod.rs  zitadel.rs
verified-permissions/infrastructure/src/repository/: adapter.rs  mod.rs  models.rs  postgres_repository.rs  repository.rs  repository_trait.rs  sqlite_repository.rs  surreal_repository.rs
verified-permissions/infrastructure/tests/: claims_mapper_advanced_tests.rs  jwks_cache_tests.rs
verified-permissions/integration-tests/: tests.rs
verified-permissions/main/: .env.example  Cargo.toml
verified-permissions/main/src/: lib.rs  main.rs
verified-permissions/main/tests/: README.md  container_integration_tests.rs  e2e_basic_working.rs  e2e_docker_working.rs  e2e_minimal_working.rs  e2e_policy_store_comprehensive.rs  e2e_policy_store_comprehensive_working.rs  e2e_policy_store_tests.rs  e2e_repository_tests.rs  identity_source_integration_tests.rs  integration_full_workflow.rs  policy_template_tests.rs  simple_integration_test.rs
verified-permissions/main/tests/common/: mod.rs
verified-permissions/main/tests/testcontainers/: fixtures.rs
verified-permissions/shared/: Cargo.toml
verified-permissions/shared/src/: config.rs  lib.rs  result.rs  traits.rs  types.rs
(+321 files in other folders)
