[workspace]
members = [".", "sdk"]

[package]
name = "hodei-verified-permissions"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC and async runtime
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# Cedar policy engine (latest version)
cedar-policy = "4.7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (using SQLite for MVP)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# JWT validation (Épica 4)
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }

# CLI (Épica 9.2)
clap = { version = "4.5", features = ["derive"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
testcontainers = "0.25.0"
tokio-test = "0.4"

[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "hodei-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "hodei-agent"
path = "src/bin/agent.rs"
