[workspace]
members = [".", "sdk", "cli", "sdk-admin", "hodei-macros"]
exclude = ["examples/axum-simple-rest"]

[package]
name = "hodei-verified-permissions"
version = "0.2.0"
edition = "2024"

[features]
# Sin features extra por defecto: solo SQLite (tests verdes por defecto)
default = []
# Enable PostgreSQL support on sqlx
postgres = [
  "sqlx/postgres",
  "sqlx/uuid",
  "sqlx/chrono"
]
# Enable SurrealDB dependency
surreal = [
  "dep:surrealdb"
]
# Enable container-based integration tests
containers = []

[dependencies]
# gRPC and async runtime
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# Cedar policy engine (latest version)
cedar-policy = "4.7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - sqlx base with runtime and SQLite enabled by default
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

# Database - SurrealDB optional (only when feature is enabled)
surrealdb = { version = "2.0", optional = true }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# JWT validation (Épica 4)
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }

# CLI (Épica 9.2)
clap = { version = "4.5", features = ["derive"] }

# Async trait support
async-trait = "0.1"

# Configuration
toml = "0.9.8"

# Regex support
regex = "1.10"

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
testcontainers = { version = "0.25.0", features = ["blocking"] }
testcontainers-modules = { version = "0.13.0", features = ["postgres", "surrealdb"] }
tokio-test = "0.4"
# SDK client for E2E tests
hodei-permissions-sdk = { path = "sdk" }

[build-dependencies]
tonic-prost-build = "0.14.2"


# Gate container tests behind the `containers` feature
[[test]]
name = "container_integration_tests"
path = "tests/container_integration_tests.rs"
required-features = ["containers"]

[[test]]
name = "e2e_policy_store_tests"
path = "tests/e2e_policy_store_tests.rs"
required-features = ["containers"]

[[test]]
name = "e2e_basic_working"
path = "verified-permissions/main/tests/e2e_basic_working.rs"
required-features = ["containers"]

[[test]]
name = "e2e_docker_working"
path = "verified-permissions/main/tests/e2e_docker_working.rs"
