[package]
name = "hodei-macros"
version = "0.1.0"
edition = "2024"
authors = ["Hodei Team"]
description = "Procedural macros for Hodei Verified Permissions SDK"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

[dev-dependencies]
trybuild = "1.0"
