[package]
name = "hvp-cli"
version = "0.2.0"
edition = "2024"
authors = ["Hodei Team"]
description = "CLI tools for Hodei Verified Permissions"
license = "MIT"

[[bin]]
name = "hvp"
path = "src/main.rs"

[features]
default = []
schema = ["verified-permissions-sdk/schema"]
runtime-mapping = ["verified-permissions-sdk/runtime-mapping"]

[dependencies]
# Admin SDK for Control Plane operations
verified-permissions-sdk-admin = { path = "../verified-permissions-sdk-admin" }

# SDK with schema generation feature
verified-permissions-sdk = { path = "../verified-permissions-sdk", features = ["schema", "runtime-mapping"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
