[package]
name = "sdk-admin"
version = "0.2.0"
edition = "2024"
authors = ["Hodei Team"]
description = "Admin SDK for Hodei Verified Permissions - Programmatic Control Plane operations"
license = "MIT"

[lib]
name = "sdk_admin"
path = "src/lib.rs"

[dependencies]
# SDK dependency (for proto types and client)
hodei-permissions-sdk = { path = "../sdk" }

# gRPC support
tonic = { version = "0.14", features = ["transport"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
