[package]
name = "hodei-permissions-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Hodei Team"]
description = "Client SDK for Hodei Verified Permissions authorization service"
license = "MIT"

[features]
default = []
middleware = ["axum", "tower", "tower-layer", "http", "http-body", "http-body-util", "matchit"]
schema = ["openapiv3", "url"]
runtime-mapping = ["schema", "matchit", "http", "form_urlencoded"]

[dependencies]
# gRPC client
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

# Logging
tracing = "0.1.35"

# Async utilities
async-trait = "0.1"

# Middleware dependencies (optional)
axum = { version = "0.8.6", optional = true }
tower = { version = "0.5", optional = true }
tower-layer = { version = "0.3", optional = true }
http = { version = "1.0", optional = true }
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1", optional = true }

# Schema generation dependencies (optional)
openapiv3 = { version = "2.0", optional = true }
url = { version = "2.5", optional = true }

# Runtime mapping dependencies (optional)
matchit = { version = "0.9", optional = true }
form_urlencoded = { version = "1.2", optional = true }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio-test = "0.4.0"
