[workspace]
resolver = "2"
members = [
    "shared",
    "domain",
    "application",
    "infrastructure",
    "api",
    "main",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hodei Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
hodei-shared = { path = "shared" }
hodei-domain = { path = "domain" }
hodei-application = { path = "application" }
hodei-infrastructure = { path = "infrastructure" }
hodei-api = { path = "api" }

# gRPC and async runtime
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# Cedar policy engine
cedar-policy = "4.7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
surrealdb = { version = "2.0" }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# JWT validation
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async trait support
async-trait = "0.1"

# Configuration
toml = "0.9.8"
