[package]
name = "demo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "form", "query", "typed-header"] }
askama = "0.12"
askama_axum = "0.4"

# Database
sqlx = { version = "0.7", features = ["sqlite", "chrono", "runtime-tokio-rustls"] }

# SDK integration
verified-permissions-sdk = { path = "../../verified-permissions-sdk", features = ["middleware"] }

# Utils
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.10", features = ["v4"] }

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
