[workspace]

[package]
name = "todo-app"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "todo_app"
path = "src/lib.rs"

[dependencies]
# Hodei SDK with all features
hodei-permissions-sdk = { path = "../../sdk", features = ["middleware", "runtime-mapping"] }
# Hodei macros for Cedar annotations
hodei-macros = { path = "../../hodei-macros" }

# Web framework
axum = "0.8"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database (in-memory for this example)
dashmap = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing
axum-test = "15.0"
http-body-util = "0.1"
