[package]
name = "hodei-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
hodei-shared.workspace = true
hodei-domain.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async trait support
async-trait.workspace = true

# Time handling
chrono.workspace = true

# Logging
tracing.workspace = true
