[package]
name = "hodei-verified-permissions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
postgres = ["hodei-infrastructure/postgres"]
surreal = ["hodei-infrastructure/surreal"]
containers = []

[dependencies]
# Internal dependencies
hodei-shared.workspace = true
hodei-domain.workspace = true
hodei-application.workspace = true
hodei-infrastructure.workspace = true
hodei-api.workspace = true

# gRPC
tonic.workspace = true

# Async runtime
tokio = { workspace = true, features = ["signal"] }

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

[dev-dependencies]
testcontainers = { version = "0.25.0", features = ["blocking"] }
testcontainers-modules = { version = "0.13.0", features = ["postgres", "surrealdb"] }
tokio-test = "0.4"
verified-permissions-sdk = { path = "../../verified-permissions-sdk" }
verified-permissions-sdk-admin = { path = "../../verified-permissions-sdk-admin" }

[[bin]]
name = "hodei-verified-permissions"
path = "src/main.rs"

[[bin]]
name = "hodei-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "hodei-agent"
path = "src/bin/agent.rs"
